<resources>
    <string name="app_name">My App</string>
    <string name="btn1_name">Switch!</string>
    <string name="btn2_name">Back!</string>
    <string name="btn3_name">Toast!</string>
    <string name="btn4_name">Alert!</string>
    <string name="btn5_name">AlertList!</string>
    <string name="pick_mood">Mood Select!</string>
    <string name="mood1">Happy</string>
    <string name="mood2">Mad</string>
    <string name="mood3">Sad</string>
    <string-array name="gender_list">
        <item>---性別---</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="maleAgeLess18">\u003C 18</string>
    <string name="maleAgeGreater18">\u003E 18</string>
    <string name="femaleAgeLess16">\u003C 16</string>
    <string name="femaleAgeGreater16">\u003E 16</string>
    <string name="tvAge">Age : </string>
    <string name="tvGender">Gender : </string>
    <string name="radbtnGenderMale">Male</string>
    <string name="radbtnGenderFemale">Female</string>
    <string name="chkboxMusic">音樂</string>
    <string name="chkboxSing">唱歌</string>
    <string name="chkboxDance">跳舞</string>
    <string name="chkboxTravel">旅遊</string>
    <string name="chkboxReading">閱讀</string>
    <string name="chkboxWriting">寫作</string>
    <string name="chkboxClimbing">爬山</string>
    <string name="chkboxSwimming">游泳</string>
    <string name="chkboxExercise">運動</string>
    <string name="chkboxFitness">健身</string>
    <string name="chkboxPhoto">照相</string>
    <string name="chkboxFood">美食</string>
    <string name="chkboxPainting">繪畫</string>
    <string name="btnHobbbyConfirm">確認</string>
    <string name="hobbyResult">你的興趣是&#058;</string>
    </resources>
