<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapp.Main4Activity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxMusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxMusic" />

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxSing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxSing" />

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxDance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxDance" />

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxTravel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxTravel" />

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxReading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxReading" />

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxWriting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxWriting" />

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxClimbing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxClimbing" />

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxSwimming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxSwimming" />

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxExercise" />

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxFitness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxFitness" />

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxPhoto" />

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxFood" />

            <CheckBox
                android:textSize="36sp"
                android:id="@+id/chkBoxPainting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkboxPainting" />

            <Button
                android:id="@+id/btn_btn8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnHobbbyConfirm" />

            <TextView
                android:id="@+id/tv_hobbyResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
