<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BMI Result"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_btn2"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <Spinner
        android:id="@+id/spn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/gender_list"
        app:layout_constraintBottom_toTopOf="@+id/btn_btn2"
        app:layout_constraintEnd_toEndOf="@+id/tv_result"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@+id/tv_result"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:onClick="back"
        android:text="@string/btn2_name"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@id/tv_result" />

    <RadioGroup
        android:id="@+id/radGrpGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/radBtnGender1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radbtnGenderMale" />

        <RadioButton
            android:id="@+id/radBtnGender2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radbtnGenderFemale" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radGrpAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/radGrpGender"
        app:layout_constraintTop_toBottomOf="@+id/tv_age">

        <RadioButton
            android:id="@+id/radBtnAge1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maleAgeLess18" />

        <RadioButton
            android:id="@+id/radBtnAge2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maleAgeGreater18" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAge"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spn1"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="314dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/tvGender"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_age"
        app:layout_constraintEnd_toEndOf="@+id/tv_age"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="@+id/tv_age"
        app:layout_constraintTop_toBottomOf="@+id/spn1"
        app:layout_constraintVertical_bias="0.176" />


</androidx.constraintlayout.widget.ConstraintLayout>