<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:text="Hello World!"
    />

    <TextView
            android:layout_marginTop="20dp"
            android:text="姓名"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    />

    <EditText
            android:id="@+id/ed_name"
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
    />

    <TextView
            android:layout_marginTop="20dp"
            android:text="體重"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    />

    <EditText
            android:id="@+id/ed_weight"
            android:inputType="number"
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
    />

    <TextView
            android:layout_marginTop="20dp"
            android:text="身高"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    />

    <EditText
            android:id="@+id/ed_height"
            android:inputType="number"
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
    />
    <Button
            android:id="@+id/btn_btn1"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1_name"
            android:onClick="bmi"
    />

    <Button
            android:id="@+id/btn_btn3"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn3_name"
            android:onClick="toast"
    />

    <Button
            android:id="@+id/btn_btn4"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn4_name"
            android:onClick="alert"
    />

</LinearLayout>
</ScrollView>